New: Run API with dapr sidecar in self-hosted mode

--- a/src/SampleAPI/appsettings.json
+++ b/src/SampleAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "dapr": {
+    "statestoreName": "statestore",
+    "secretstoreName": "secretstore",
+    "pubsubConfig": {
+      "topic": "mytopic",
+      "pubsubName": "kafka-pubsub"
+    }
+  }
 }
