--- a/src/SampleAPI/Properties/launchSettings.json
+++ b/src/SampleAPI/Properties/launchSettings.json
@@ -14,7 +14,9 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DAPR_GRPC_PORT": "53000",
+        "DAPR_HTTP_PORT": "53001"
       },
       "applicationUrl": "https://localhost:7117;http://localhost:5117",
       "dotnetRunMessages": true
