--- a/dapr-components/local-cluster/state-redis.yaml
+++ b/dapr-components/local-cluster/state-redis.yaml
@@ -2,13 +2,14 @@ apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
   name: statestore
+  namespace: vik
 spec:
   type: state.redis
   version: v1
   metadata:
   - name: redisHost
-    value: "redis-master.vik.svc.cluster.loca:6379"
+    value: "redis-master.vik.svc.cluster.local:6379"
   - name: enableTLS
-    value: false.  
+    value: false
   - name: actorStateStore
-    value: true.    
+    value: true
