--- a/src/SampleAPI/Properties/launchSettings.json
+++ b/src/SampleAPI/Properties/launchSettings.json
@@ -13,13 +13,13 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7117;http://localhost:5117",
+      "dotnetRunMessages": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DAPR_GRPC_PORT": "53000",
         "DAPR_HTTP_PORT": "53001"
-      },
-      "applicationUrl": "https://localhost:7117;http://localhost:5117",
-      "dotnetRunMessages": true
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
