--- a/dapr-components/local-cluster/service-deployment.yaml
+++ b/dapr-components/local-cluster/service-deployment.yaml
@@ -32,10 +32,15 @@ spec:
         service: sample-api
       annotations:
         dapr.io/enabled: "true"
-        dapr.io/app-id: "sample-api"
-        dapr.io/app-port: "80"
+        dapr.io/app-id: "sample-api-app-id"
+        dapr.io/app-port: "5000"
+        dapr.io/app-ssl: "false"
+        dapr.io/log-level: "debug"
         dapr.io/config: "dapr-config"
         dapr.io/log-as-json: "true"
+        dapr.io/app-protocol: "http"
+        dapr.io/sidecar-liveness-probe-delay-seconds: "30"
+        dapr.io/sidecar-readiness-probe-delay-seconds: "30"
     spec:
       containers:
         - name: sample-api
