--- a/dapr-components/local-cluster/state-redis.yaml
+++ b/dapr-components/local-cluster/state-redis.yaml
@@ -8,7 +8,7 @@ spec:
   version: v1
   metadata:
   - name: redisHost
-    value: "redis-master.vik.svc.cluster.local:6379"
+    value: redis-master.vik.svc.cluster.local:6379
   - name: enableTLS
     value: false
   - name: actorStateStore
